--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h2>ali</h2>
     <h3>tharun</h3>
     <p>this is pushh</p>
-    <button>web</button>
+    <button>web design</button>
 </body>
 </html>
